# git-ai

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  flake.nix  package.nix
debian/: changelog  control  rules
include/: ai.h  help.h  main.h
scripts/: build.sh  run.sh  run_debug.sh
src/: main.cpp
src/lib/: ai.cpp  help.cpp
